--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 </tr>
                 <tr>
                     <td>git init</td>
-                    <td>-</td>
+                    <td> - </td>
+
+                    <td>создать пустой репозиторий Git или повторно инициализировать существующий</td>
                 </tr>
                 <tr>
                     <td>git init</td>
