--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
                 </tr>
                 <tr>
                     <td>git init</td>
-                    <td>-</td>
+                    <td> - </td>
                     <td>создать пустой репозиторий Git или повторно инициализировать существующий</td>
                 </tr>
                 <tr>
                     <td>git clone url</td>
-                    <td>-</td>
+                    <td> - </td>
                     <td>клонировать удаленный репозиторий по ссылке</td>
                 </tr>
                 <tr>
                     <td>git add file</td>
-                    <td>-</td>
+                    <td> - </td>
+                    <td>добавить содержимое файла в индекс</td>
                 </tr>
                 <tr>
                     <td>git add .</td>
