--- a/index.html
+++ b/index.html
@@ -24,26 +24,27 @@
                 <tr>
                     <td>git init</td>
                     <td> - </td>
-                    <td>создать пустой репозиторий Git или повторно инициализировать существующий</td>
+                    <td>создание пустого репозитория Git или повторная инициализация существующего</td>
                 </tr>
                 <tr>
                     <td>git init</td>
                     <td> - </td>
-                    <td>создать пустой репозиторий Git или повторно инициализировать существующий</td>
+                    <td>создание пустого репозитория Git или повторная инициализация существующего</td>
                 </tr>
                 <tr>
                     <td>git clone url</td>
                     <td> - </td>
-                    <td>клонировать удаленный репозиторий по ссылке</td>
+                    <td>клонирование удаленного репозитория по ссылке</td>
                 </tr>
                 <tr>
                     <td>git add file</td>
                     <td> - </td>
-                    <td>добавить содержимое файла в индекс</td>
+                    <td>добавление содержимого файла в индекс</td>
                 </tr>
                 <tr>
                     <td>git add .</td>
-                    <td>-</td>
+                    <td> - </td>
+                    <td>индексация всех файлов в текущей директории</td>
                 </tr>
                 <tr>
                     <td>git commit -m "comment"</td>
