--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <tr>
                     <td>git commit -m "comment"</td>
                     <td>-</td>
+                    <td>запуск коммита и включение сообщения о фиксации</td>
                 </tr>
                 <tr>
                     <td>git commit -a -m "comment"</td>
