--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
                 <tr>
                     <td>git commit -a -m "comment"</td>
                     <td>-</td>
+                    <td>регистрация добавления вышеприведенных файлов (индексирование всех изменений и сообщение о коммите)</td>
                 </tr>
                 <tr>
                     <td>git push url</td>
                     <td>-</td>
+                    <td>отправка текущей измененной и закоммиченной ветки в удаленный репозиторий</td>
                 </tr>
                 <tr>
                     <td>git status</td>
