--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <tr>
                     <td>git status</td>
                     <td>-</td>
+                    <td>проверка статуса файлов в репозитории</td>
                 </tr>
                 <tr>
                     <td>git log</td>
