--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <tr>
                     <td>git log</td>
                     <td>-</td>
+                    <td>историю коммитов в обратном хронологическом порядке</td>
                 </tr>
                 <tr>
                     <td>git branch branch_name</td>
