--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
                 <tr>
                     <td>git log</td>
                     <td>-</td>
-                    <td>историю коммитов в обратном хронологическом порядке</td>
+                    <td>вывод истории коммитов в обратном хронологическом порядке</td>
                 </tr>
                 <tr>
                     <td>git branch branch_name</td>
                     <td>-</td>
+                    <td>создание новой ветки</td>
                 </tr>
                 <tr>
                     <td>git checkout branch_name</td>
