--- a/index.html
+++ b/index.html
@@ -79,14 +79,17 @@
                 <tr>
                     <td>git checkout branch_name</td>
                     <td>-</td>
+                    <td>переключение с одной ветки на другую</td>
                 </tr>
                 <tr>
                     <td>git checkout -b branch_name</td>
                     <td>-</td>
+                    <td>создание ветки и переход в неё одной командой</td>
                 </tr>
                 <tr>
                     <td>git remote</td>
                     <td>-</td>
+                    <td>просмотр названий удалённых репозиториев</td>
                 </tr>
             </table>
         </div >
