--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css"/>
         <meta charset="utf-8">
         <meta name="description" content="OOP exam questions">
         <title>
@@ -22,73 +23,59 @@
                     <th>Описание</th>
                 </tr>
                 <tr>
-                    <td>git init</td>
-                    <td>-</td>
+                    <td>git init</td>                    
                     <td>создание пустого репозитория Git или повторная инициализация существующего</td>
                 </tr>
                 <tr>
                     <td>git init</td>
-                    <td>-</td>
                     <td>создание пустого репозитория Git или повторная инициализация существующего</td>
                 </tr>
                 <tr>
-                    <td>git clone url</td>
-                    <td>-</td>
+                    <td>git clone url</td>                    
                     <td>клонирование удаленного репозитория по ссылке</td>
                 </tr>
                 <tr>
-                    <td>git add file</td>
-                    <td>-</td>
+                    <td>git add file</td>                   
                     <td>добавление содержимого файла в индекс</td>
                 </tr>
                 <tr>
-                    <td>git add .</td>
-                    <td>-</td>
+                    <td>git add .</td>                    
                     <td>индексация всех файлов в текущей директории</td>
                 </tr>
                 <tr>
-                    <td>git commit -m "comment"</td>
-                    <td>-</td>
+                    <td>git commit -m "comment"</td>                    
                     <td>запуск коммита и включение сообщения о фиксации</td>
                 </tr>
                 <tr>
-                    <td>git commit -a -m "comment"</td>
-                    <td>-</td>
+                    <td>git commit -a -m "comment"</td>                    
                     <td>регистрация добавления вышеприведенных файлов (индексирование всех изменений и сообщение о коммите)</td>
                 </tr>
                 <tr>
-                    <td>git push url</td>
-                    <td>-</td>
+                    <td>git push url</td>                    
                     <td>отправка текущей измененной и закоммиченной ветки в удаленный репозиторий</td>
                 </tr>
                 <tr>
-                    <td>git status</td>
-                    <td>-</td>
+                    <td>git status</td>                   
                     <td>проверка статуса файлов в репозитории</td>
                 </tr>
                 <tr>
-                    <td>git log</td>
-                    <td>-</td>
+                    <td>git log</td>                    
                     <td>вывод истории коммитов в обратном хронологическом порядке</td>
                 </tr>
                 <tr>
-                    <td>git branch branch_name</td>
-                    <td>-</td>
+                    <td>git branch branch_name</td>                    
                     <td>создание новой ветки</td>
                 </tr>
                 <tr>
-                    <td>git checkout branch_name</td>
-                    <td>-</td>
+                    <td>git checkout branch_name</td>                    
                     <td>переключение с одной ветки на другую</td>
                 </tr>
                 <tr>
-                    <td>git checkout -b branch_name</td>
-                    <td>-</td>
+                    <td>git checkout -b branch_name</td>                    
                     <td>создание ветки и переход в неё одной командой</td>
                 </tr>
                 <tr>
-                    <td>git remote</td>
-                    <td>-</td>
+                    <td>git remote</td>                    
                     <td>просмотр названий удалённых репозиториев</td>
                 </tr>
             </table>
